Fixed puppy sizing issue, menu spacing & centered text on index

--- a/menu.css
+++ b/menu.css
@@ -2,7 +2,7 @@
     overflow: hidden;
     background-color: #333;
     font-family: Arial, Helvetica, sans-serif;
-    width: 28%;
+    width: 50%;
 }
 
 .navbar a {
