--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 /* This is a comment test */
 * {
   color: rgb(0, 0, 0);
-  box-sizing: border-box;
-  margin: 4px;
+  text-align: center;
   padding: 0;
 }
 
 html, body {
   height: 100%;
+  box-sizing: border-box;
+  margin: 4px;
 }
 
 body {
@@ -22,7 +23,6 @@ mark {
 }
 
 h1 { /* Header */
-  text-align: center;
   font-size: 50px;
 }
 
@@ -45,5 +45,4 @@ footer {
   justify-content: center; /* Center horizontally */
   align-items: flex-end;   /* Align to the bottom */
   height: 100%;
-  text-align: center;   /* Center text inside the div */
 }
